# COMS4160_CGI

./: README.md
1--vectors-and-images/: README.md  olio.tgz
1--vectors-and-images/olio/: CMakeLists.txt
1--vectors-and-images/olio/cmake/Modules/: FindOlioCommonDepends.cmake
1--vectors-and-images/olio/src/: CMakeLists.txt
1--vectors-and-images/olio/src/core/: CMakeLists.txt  circle.cc  circle.h  image_utils.cc  image_utils.h  segfault_handler.cc  segfault_handler.h  types.h  vector.cc  vector.h
1--vectors-and-images/olio/src/olio_exe/: CMakeLists.txt  main.cc
1--vectors-and-images/olio/src/tests/: CMakeLists.txt  tests.cc
2--ray-tracing-framework/: README.md  olio.tgz
2--ray-tracing-framework/olio/src/core/: ray.cc  ray.h  types.h
2--ray-tracing-framework/olio/src/rtbasic/: CMakeLists.txt  main.cc
2--ray-tracing-framework/olio/src/tests/: main.cc
3--illumination-and-shading/: README.md  olio.tgz
3--illumination-and-shading/olio/data/scenes/: dna.scn  test1.scn  test2_no_lights.scn  test3_no_surfaces.scn  texture_mat.scn
3--illumination-and-shading/olio/src/rtbasic/: main.cc
3--illumination-and-shading/olio/src/tests/: main.cc
3--illumination-and-shading/solution_executable/: olio_rtbasic
4--shadows--reflections--and-refractions/: README.md
5--meshes--textures--and-bvhs/olio/data/scenes/: streetlamp_scene.scn
6---bonus--soft-shadows/: README.md
6---bonus--soft-shadows/solution_executable/: olio_rtbasic
7--opengl-mesh-viewer/mesh_view_phong/shaders/: test_v.glsl
7--opengl-mesh-viewer/mesh_view_phong/src/: trimesh.cc  trimesh.h
(+73 files in other folders)
